2004-05-24  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add files "canonicalize.c", "cycle-check.c",
	"canonicalize.h", "cycle-check.h", "dev-ino.h", "glob.h", "mempcpy.h",
	"path-concat.h", "stat-macros.h" and "strdup.h" to project.
	* libcvs.dep, libcvs.mak: Regenerated for "libcvs.dsp" change.

2005-05-24  Conrad T. Pino  <Conrad@Pino.com>

	* glob_.h: Remove "struct stat;" forward declaration and update comment.

2005-05-24  Conrad T. Pino  <Conrad@Pino.com>

	* glob_.h: "#include <sys/stat.h>" for Solaris "#define stat stat64" case.

2005-05-24  Derek Price  <derek@ximbiot.com>

	* stat.c: Use system stat & lstat functions in this file.
	* system.h (CVS_STAT, CVS_LSTAT): Remove these macros.

2005-05-24  Derek Price  <derek@ximbiot.com>

	* Makefile.am (BUILT_SOURCES, EXTRA_DIST, MAINTAINERCLEANFILES): Add
	getdate.c due to automake bug.

2005-05-24  Derek Price  <derek@ximbiot.com>

	* glob_.h, glob.c: Don't attempt to handle 64 bit file information
	explicitly when not compiling as part of glibc.

2005-05-23  Derek Price  <derek@ximbiot.com>

	* canonicalize.c, canonicalize.h, cycle-check.c, cycle-check.h,
	dev-ino.h, path-concat.c, path-concat.h: New files from GNULIB.

2005-05-23  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Remove unnecessary comment.

2005-05-23  Derek Price  <derek@ximbiot.com>

	* __fpending.c, alloca_.h, allocsa.c, allocsa.h, asnprintf.c,
	asprintf.c, basename.c, chdir-long.c, chdir-long.h, closeout.c,
	closeout.h, dirname.c, dirname.h, dup-safer.c, dup2.c, error.c,
	error.h, exit.h, exitfail.c, exitfail.h, fd-safer.c, fnmatch.c,
	fnmatch_.h, fnmatch_loop.c, getcwd.c, getcwd.h, getdate.c, getdate.h,
	getdate.y, gethostname.c, getline.c, getline.h, getndelim2.c,
	getndelim2.h, getnline.c, getnline.h, getopt.c, getopt1.c, getopt_.h,
	getopt_int.h, getpagesize.h, getpass.c, getpass.h, gettext.h,
	gettime.c, gettimeofday.c, lstat.c, malloc.c, md5.c, md5.h, mempcpy.c,